# ssm

./: .gitignore  CMakeLists.txt  README.md  arch.hpp  mat4.hpp  matrix.hpp  quat.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector-data.hpp  vector.hpp  vector4.hpp
detail/: setup.hpp  type-traits.hpp  vector-data.hpp  vector-manip.hpp  vector.inl
simd/: access.hpp  traits.hpp  types.hpp  vector.hpp
simd/types/: d128.inl  f128.inl  s128.inl
src/: quat.inl  transform.inl  vec2.inl  vec3.inl  vec4.inl
src/intrin/: arithmetic.hpp  cache.hpp  compare.hpp  geometric.hpp  loads.hpp  swizzle.hpp
ssm/: matrix.hpp  quat.hpp  quaternion.hpp  transform.hpp  vector.hpp
ssm/detail/: generic-vec.hpp  loop-unroll.hpp  matrix-mul.inl  type-traits.hpp  vector-data.hpp  vector-manip.hpp
ssm/simd/: access.hpp  types.hpp  vector.hpp
ssm/simd/types/: d128.inl  d256.inl  f128.inl  s128.inl
ssm/src/: mat4.inl  quat.inl  transform.inl  vec3.inl
ssm/src/intrin/: arithmetic.hpp  logical.hpp
tests/: CMakeLists.txt  matrix.cpp  quaternion.cpp  ssm.sln  ssm.vcxproj  ssm.vcxproj.filters  transform.cpp  vector.cpp
tests/x64/Debug/: ssm.ilk  vc141.idb
tests/x64/Debug/ssm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  ssm.lastbuildstate
tests/x64/Release/ssm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  ssm.lastbuildstate
